syntax = "proto3";
package books;

service BooksService {
  rpc getEmpty (EmptyParams) returns (EmptyParams) {};
  rpc getAll (EmptyParams) returns (Books) {};
  rpc getOne (EmptyParams) returns (Book) {};
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  string description = 5;
  string price = 6;
}

message Books {
  repeated Book books = 1;
}

message EmptyParams {
}
